# pytest-find-dependencies

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythontests.yml
src/find_dependencies/: dependency_finder.py  plugin.py
tests/: test_find_dependencies.py
